# study_rag

./: .env.example  .gitignore  CLAUDE.md  README.md  SPEC.md  TASKS.md  TODO.md  main.py  pyproject.toml  requirements.txt  run.sh
data/: eval_questions.example.json
data/csv/: japan_prefectures.csv  products.csv
docs/: ENHANCEMENTS.md  SPEC.md  TASKS.md  flow.md
mlflow_tracking/: experiments.py
rag/: chain.py  evaluator.py  graph.py  ingest.py  llm.py
src/: app.py  main.py
src/mlflow_tracking/: experiments.py
src/rag/: agent.py  chain.py  evaluator.py  graph.py  ingest.py  llm.py  multi_agent.py  retriever.py  table_search.py
